fix bug on add-task-contacts rendering with firstletter and make button visible to creat task under 1024px

--- a/add_task/add_task_responsive.css
+++ b/add_task/add_task_responsive.css
@@ -37,7 +37,8 @@
   .create-task-btn-resp {
     top: 3.3vh;
     right: 5vw;
-    z-index: 50;
+    position: absolute;
+    z-index: 800;
   }
 
   .new-contact {
